# wing-corrosion

./: .gitignore  LICENSE  README.md  main.py  problem.md  pyproject.toml  ruff.toml  skills-lock.json
experiments/: 01_baseline.py
journal/: 01_baseline.md  JOURNAL.md
kaggle/wing-corrosion-baseline/: kernel-metadata.json  wing-corrosion-baseline.py
src/wing_corrosion/: __init__.py  data.py  evaluate.py  features.py  pipeline.py
